--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -29,6 +29,7 @@ go_test(
     ],
     deps = [
         "@com_github_alecthomas_assert_v2//:go_default_library",
+        "@com_github_google_go_cmp//cmp",
         "go-proj"
     ],
     cgo = True,
